# NeuroVision

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
assets/demo_results/: spatial_demo_report.html
dashboard/: .env.example  README.md  run_demo.sh
dashboard/backend/: __init__.py  analysis_service.py  camera_service.py  main.py  requirements.txt  test_standalone.py  voice_service.py
dashboard/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: App.jsx  index.css
dashboard/frontend/src/components/: AlertPanel.jsx  BrainModel3D.jsx  MetricsDashboard.jsx  RoleSelector.jsx  VideoFeed.jsx  index.js
dashboard/frontend/src/components/pituitary/: GuidedNavigation.jsx  HandTracker.jsx  PituitaryModel3D.jsx  SurgicalInstruments.jsx
dashboard/frontend/src/hooks/: useNeuroVision.js
demos/examples/: live_demo.py
demos/react/: ClaudeSpatialDemo.jsx  NeurosurgicalAIPlatform.jsx  NeurosurgicalRoboticsDemo.jsx  NeurosurgicalSpatialDemo.jsx
docs/api/: CAMERA_API.md
docs/architecture/: SYSTEM_ARCHITECTURE.md  VISION_PIPELINE.md
docs/plans/: 2025-01-01-pituitary-surgery-training-design.md  2025-01-01-surgical-command-center-design.md
examples/: basic_usage.py
mcp_server/: README.md  __init__.py  install_to_claude_desktop.sh  neurovision_mcp.py  requirements.txt
src/core/: __init__.py  neurosurgical_ai_platform.py
src/robotics/: __init__.py  neurosurgical_robotics_ai.py
src/training/: __init__.py
src/vision/: __init__.py  camera_vision_system.py  claude_spatial_understanding.py  neurosurgical_spatial_understanding.py
tests/: test_segmentation.py
